--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -1,3 +1,27 @@
 button {
-  background: #e5de2d;
+  outline: none;
+  transition: all 0.3s;
+  cursor: pointer;
+  border-radius: 4px;
+  color: #212121;
+  border: none;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Quicksand", sans-serif;
+
+  &.primary {
+    background: #e5de2d;
+
+    &:hover {
+      background: #f7f380;
+    }
+  }
+
+  &.secondary {
+    background: #ced4da;
+
+    &:hover {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+  }
 }
