--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -8,6 +8,7 @@ button {
   font-size: 14px;
   font-weight: 500;
   font-family: "Quicksand", sans-serif;
+  padding: 7px 24px;
 
   &.primary {
     background: #e5de2d;
