--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -8,7 +8,12 @@ button {
   font-size: 14px;
   font-weight: 500;
   font-family: "Quicksand", sans-serif;
-  padding: 7px 24px;
+  padding: 0 24px;
+  height: 32px;
+
+  & + & {
+    margin-left: 20px;
+  }
 
   &.primary {
     background: #e5de2d;
