--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,12 @@
     width: 100%;
     height: auto;
     position: relative;
-    padding: 25px;
+    padding-top: 25px;
     background: #121212;
     border-radius: 5px;
+  }
+
+  .tabview {
+    padding: 25px;
   }
 }
