--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -2,49 +2,62 @@
   position: relative;
   display: inline-block;
 
-  &:after {
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid #e5de2d;
-    position: absolute;
-    top: 40%;
-    right: 8px;
-    content: "";
-    z-index: 98;
+  label {
+    display: block;
+    font-weight: 500;
+    font-size: 12px;
+    color: #f4f8f9;
+    margin-bottom: 5px;
   }
 
-  select {
-    background: #323232;
-    border-radius: 4px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    height: 32px;
-    padding: 0 8px;
-    font-family: "Quicksand", sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    outline: none;
-    transition: all 0.3s;
-    color: #f4f8f9;
-    min-width: 250px;
-    border-color: #adb5bd;
+  &__container {
     position: relative;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    text-indent: 1px;
-    text-overflow: "";
+    display: inline-block;
 
-    &:hover {
+    &:after {
+      width: 0;
+      height: 0;
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-top: 6px solid #e5de2d;
+      position: absolute;
+      top: 40%;
+      right: 8px;
+      content: "";
+      z-index: 98;
+    }
+
+    select {
+      background: #323232;
+      border-radius: 4px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      height: 32px;
+      padding: 0 8px;
+      font-family: "Quicksand", sans-serif;
+      font-size: 14px;
+      font-weight: 500;
+      outline: none;
+      transition: all 0.3s;
+      color: #f4f8f9;
+      min-width: 250px;
       border-color: #adb5bd;
-    }
+      position: relative;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      text-indent: 1px;
+      text-overflow: "";
 
-    &:focus {
-      border-color: #e5de2d;
-    }
+      &:hover {
+        border-color: #adb5bd;
+      }
 
-    .placeholder {
-      color: #adb5bd;
+      &:focus {
+        border-color: #e5de2d;
+      }
+
+      .placeholder {
+        color: #adb5bd;
+      }
     }
   }
 }
