--- a/src/App.scss
+++ b/src/App.scss
@@ -29,3 +29,26 @@ $padding-default: 25px;
     }
   }
 }
+
+.language {
+  margin: 10px 0 25px;
+
+  &__dropdown:not(:last-of-type) {
+    margin-right: 80px;
+  }
+
+  &__view {
+    &-text {
+      font-size: 14px;
+      line-height: 5px;
+      font-weight: 500;
+      font-family: "Quicksand", sans-serif;
+      color: #f4f8f9;
+      margin-bottom: 5px !important;
+
+      .default-text {
+        color: #adb5bd;
+      }
+    }
+  }
+}
