--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -46,6 +46,7 @@
       -moz-appearance: none;
       text-indent: 1px;
       text-overflow: "";
+      cursor: pointer;
 
       &:hover {
         border-color: #adb5bd;
