make language selector component

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,37 +30,19 @@ $padding-default: 25px;
   }
 }
 
-.language {
-  margin: 10px 0 50px;
-
-  &__dropdown:not(:last-of-type) {
-    margin-right: 80px;
-  }
-
-  &__view {
-    &-text {
-      font-size: 14px;
-      line-height: 5px;
-      font-weight: 500;
-      font-family: "Quicksand", sans-serif;
-      color: #f4f8f9;
-      margin-bottom: 5px !important;
-
-      .default-text {
-        color: #adb5bd;
-      }
-    }
-  }
-}
-
 .text-inputs {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 
   .column {
     width: 48%;
     display: inline-block;
   }
+}
+
+.submit-button {
+  margin-left: auto;
+  display: block;
 }
