--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -1,4 +1,4 @@
-button {
+.mt-button {
   outline: none;
   transition: all 0.3s;
   cursor: pointer;
@@ -10,6 +10,10 @@ button {
   font-family: "Quicksand", sans-serif;
   padding: 0 24px;
   height: 32px;
+
+  & + & {
+    margin-left: 20px;
+  }
 
   &.primary {
     background: #e5de2d;
@@ -26,9 +30,4 @@ button {
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
-}
-
-.submit-button {
-  margin-left: auto;
-  display: block;
 }
