--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -32,7 +32,7 @@
       transition: all 0.3s;
       color: #f4f8f9;
       min-width: 250px;
-      border-color: #adb5bd;
+      // border-color: #adb5bd;
       position: relative;
       -webkit-appearance: none;
       -moz-appearance: none;
