--- a/src/styles/Dropbox.scss
+++ b/src/styles/Dropbox.scss
@@ -90,4 +90,12 @@
             }
         }
     }
+    .snackbar {
+        &.error {
+            background-color: #ff685f;
+        }
+        &.success {
+            background-color: #b6f7a9;
+        }
+    }
 }
