--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: "Quicksand", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
