Dropbox CSS changes

--- a/src/styles/Dropbox.scss
+++ b/src/styles/Dropbox.scss
@@ -42,6 +42,7 @@
             align-items: center;
             justify-content: center;
             height: 195px;
+            cursor: pointer;
         }
         .upload-container {
             color: #f4f8f9;
