Moved translate button to TranslateFile

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,3 +46,8 @@ $padding-default: 25px;
   margin-left: auto;
   display: block;
 }
+
+.btn-wrapper {
+  text-align: right;
+  padding-top: 25px;
+}
