--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -30,4 +30,9 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
+
+  &:disabled {
+    background: #f7f380;
+    pointer-events: none;
+  }
 }
