--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -17,6 +17,7 @@
       right: 8px;
       content: "";
       z-index: 98;
+      transition: all 0.3s;
     }
 
     select {
@@ -30,7 +31,7 @@
       font-weight: 500;
       outline: none;
       transition: all 0.3s;
-      color: #F4F8F9;
+      color: #f4f8f9;
       min-width: 250px;
       // border-color: #adb5bd;
       position: relative;
@@ -49,11 +50,27 @@
       }
       &:required {
         &:invalid {
-          color:#ADB5BD;
+          color: #adb5bd;
         }
       }
       option[value="0"][disabled] {
         display: none;
+      }
+    }
+  }
+
+  .help-text {
+    margin-top: 5px;
+    margin-left: 10px;
+  }
+
+  &.has-error {
+    .mt-dropdown__container {
+      &:after {
+        border-top-color: #e6514a;
+      }
+      select {
+        border-color: #e6514a;
       }
     }
   }
