--- a/src/styles/Label.scss
+++ b/src/styles/Label.scss
@@ -4,4 +4,9 @@
   font-size: 12px;
   color: #f4f8f9;
   margin-bottom: 8px;
+  transition: all 0.3s;
+
+  &.has-error {
+    color: #e6514a;
+  }
 }
