--- a/src/styles/Textarea.scss
+++ b/src/styles/Textarea.scss
@@ -35,12 +35,26 @@
     }
   }
 
+  .help-text {
+    font-weight: 500;
+    font-size: 12px;
+    margin-top: 2px;
+    margin-left: 10px;
+    float: left;
+  }
+
   .counter {
-    display: block;
+    // display: block;
     font-weight: 500;
     font-size: 12px;
     color: #adb5bd;
     margin-top: 2px;
     float: right;
+  }
+
+  &.has-error {
+    textarea {
+      border-color: #e6514a;
+    }
   }
 }
