Make preview read-only

--- a/src/App.scss
+++ b/src/App.scss
@@ -75,7 +75,7 @@ $padding-default: 25px;
         td,
         th {
           border-right: 1px solid #acacac;
-          padding: 5px
+          padding: 5px;
         }
       }
     }
